# qdrant-hackathon-2025

./: .gitignore  .gitmodules  README.md  main.py  package-lock.json  package.json  pyproject.toml
app/: data.ts  globals.css  layout.tsx  page.tsx
app/api/sse/: route.ts
app/api/tasks/: route.ts
app/contribute/: page.tsx
app/explore/: page.tsx
app/settings/: page.tsx
app/tasks/: page.tsx
app/trending/: page.tsx
backend/: .env.example  Dockerfile  README.md  README_AI.md  app.py  celery_worker.py  clear_redis.py  docker-compose.yml  example_usage.py  package.json  requirements.txt  requirements_simple.txt  run.py  test_music_db.py  test_sse.py  test_sse_list.py
backend/app/: __init__.py  extensions.py  tasks.py
backend/app/api/: health.py  recommendations.py  songs.py  tasks.py  upload.py
backend/app/models/: schemas.py
backend/app/services/: data_service.py  music_vectorization_service.py  qdrant_service.py  recommendation_service.py  video_analysis_service.py
backend/config/: config.py
backend/tests/: gemini.py  test_upload.py
components/: expandable-card-demo-grid.tsx  logo.tsx  navbar.tsx  theme-provider.tsx  title.tsx
components/create/: download.tsx  index.tsx  upload.tsx
components/home/: audio-crop.tsx  upload.tsx
components/ui/: button.tsx  file-upload.tsx  list.tsx
context/: create-context.tsx
frontend/: README.md
frontend/app/: data.ts  layout.tsx  page.tsx
frontend/components/: navbar.tsx  theme-switch.tsx
lib/: api-client.ts  logger.ts  regions.ts  youtube.ts
tests/: audio_ encode.py  mistral.py  qdrant.py
(+10 files in other folders)
