[project]
name = "qdrant-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.175.0",
    "crewai-tools>=0.65.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-mistralai>=0.2.11",
    "mistralai>=1.9.9",
    "qdrant-client>=1.15.1",
    "ytmusicapi>=1.11.0",
]
